package dss.Houses.Auction;

public interface IDecisionMaker {
    boolean makeDecision(BuildingPlan plan);
}
