package dss.Houses.House;

import java.util.List;

public abstract class House {
    List<String> materials;
    public void setMaterials() { }
    public List<String> getMaterials()
    {
       return null;
    }
    //other methods
}

