package dss.Houses.House;

public enum HouseType {
    BUDGET,
    LUXURY,
    MINIMALISTIC
}
