package dss.Houses.House;

import java.util.List;

public class MinimalisticHouse extends House {
    @Override
    public void setMaterials() {
        materials.add("Minimalistic kitchen");
    }
    @Override
    public List<String> getMaterials() {
        return null;
    }
}
