package dss.SoftWareCompany.MessageCompressor;

public interface TextSource {
    void writeText(String text);
    String readText();
}
